--- a/src/components/TagIcons/style.scss
+++ b/src/components/TagIcons/style.scss
@@ -5,3 +5,10 @@
     margin: auto;
     visibility: hidden;
 }
+
+.scrollable_tabs{
+    width: 80%;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
