--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,13 @@
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 *{
     padding:0px;
     margin:0px;
-    font-family: 'Rosario';
+    // font-family: 'Rosario';
+    font-family: 'Poppins';
 }
 
 .leaflet-container{
